Add more special punctuation. Make tools title white and bold and correct margin.

--- a/dashboard.html
+++ b/dashboard.html
@@ -89,7 +89,6 @@
     <div class="row">
         <div id="sidebar" class="col s12 m12 l2 teal white-text">
             Conversations
-            <br>
             <span class="notranslate">
         <div class="preloader-wrapper active" id="conversations-preloader">
             <div class="spinner-layer spinner-red-only">
@@ -111,7 +110,7 @@
             <a id="add-people-button" class="btn-large waves-effect waves-light red lighten-1" href="#add-conversation">Add <i class=" notranslate material-icons"> people</i></a>
             </a>
         </div>
-        <div id="chat-container" class="col s8 m8 l7">
+        <div id="chat-container" class="col s7 m7 l6 teal white-text">
             <center>Chat</center>
             <span class="notranslate">
         <div id="chat" class="card z-depth-3">
@@ -198,7 +197,7 @@
     </span>
     </div>
 
-    <div id="tools-container" class="col s4 m4 l3">
+    <div id="tools-container" class="col s5 m5 l4 white-text" style="margin-top: 5px;">
         <center>Tools</center>
         <div id="chat" class="card z-depth-3">
           <ul id="translate-panel" class="collapsible" data-collapsible="accordion">
@@ -255,6 +254,9 @@
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ó</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ú</a>
                     <a class="waves-effect waves-teal btn-flat special-character-tool-button">ñ</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">¿</a>
+                    <a class="waves-effect waves-teal btn-flat special-character-tool-button">¡</a>
+
 
                   </div>
               </li>
