Change World Without Walls name to World Without Borders for the stuff that you can see.

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Without Walls</title>
+    <title>World Without Borders</title>
     <link rel="stylesheet" type="text/css" href="styles/login.css">
 
 
@@ -19,13 +19,13 @@
     <link rel="manifest" href="manifest.json">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="World Without Walls">
+    <meta name="application-name" content="World Without Borders">
     <meta name="theme-color" content="#303F9F">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="World Without Walls">
+    <meta name="apple-mobile-web-app-title" content="World Without Borders">
     <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
     <!-- Tile icon for Win8 -->
