--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <span class="notranslate"><title>World Without Walls</title></span>
+    <span class="notranslate"><title>World Without Borders</title></span>
     <link rel="stylesheet" type="text/css" href="styles/dashboard.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 
@@ -19,13 +19,13 @@
     <link rel="manifest" href="manifest.json">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="World Without Walls">
+    <meta name="application-name" content="World Without Borders">
     <meta name="theme-color" content="#303F9F">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="World Without Walls">
+    <meta name="apple-mobile-web-app-title" content="World Without Borders">
     <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
 
     <!-- Tile icon for Win8 -->
@@ -65,7 +65,7 @@
 </ul>
 <nav>
     <div class="nav-wrapper teal" id="nav-bar">
-        <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Walls</a>
+        <a href="#" class="brand-logo"><i class="large material-icons">textsms</i>World Without Borders</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse" id="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
