--- a/founderspage.html
+++ b/founderspage.html
@@ -48,7 +48,7 @@ document.getElementById("demo").innerHTML = d.tostring();
 Click on me to display Date and Time</button>
 -->
 
-<h5><center>The Founders of World Without Walls Messaging Website.</center></h5>
+<h5><center>The Founders of World Without Borders Messaging Website.</center></h5>
 
 <div class="container">
 <ul class="collection with-header"><br>
@@ -59,7 +59,7 @@ Click on me to display Date and Time</button>
 
 <h5><center>About the Founders</center></h5><br>
 
-<p>We are three programmers that collaborated on this idea on how we could make this website called World Without Walls. The purpose of the website is to make an instant message penpal with special tools like the ability to translate words or phrases,speech to text, and grammar/spelling coreection.We came up with the idea for the website and ran with it, to develop the messaging website known as World Without Walls.</p><br><br>
+<p>We are three programmers that collaborated on this idea on how we could make this website called World Without Borders. The purpose of the website is to make an instant message penpal with special tools like the ability to translate words or phrases,speech to text, and grammar/spelling coreection.We came up with the idea for the website and ran with it, to develop the messaging website known as World Without Borders.</p><br><br>
 
 <p> RYAN: <p>Congue nec velit. Eget sed quam libero egestas vel a elit suspendisse vestibulum vitae egestas. Purus libero velit id quis nascetur. At ultricies vestibulum et eros sem. Massa fusce a.</p><br>
 
@@ -75,13 +75,13 @@ Click on me to display Date and Time</button>
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">World Without Walls</h5>
+                <h5 class="white-text">World Without Borders</h5>
                 <p class="grey-text text-lighten-4">A inovative messaging website.</p>
               </div>
               <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutwalls.tk">World Without Walls Messaging</a></li>
+                  <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutwalls.tk">World Without Borders Messaging</a></li>
                  <li><a class="grey-text text-lighten-3" href="aboutpage.html">About Page</a></li>
                  <li><a class="grey-text text-lighten-3" href="shsappdev2016-2017.slack.com">SHS App Dev Slack</a></li>
                 </ul>
