--- a/landingpage.html
+++ b/landingpage.html
@@ -16,12 +16,23 @@
 </head>
 
 <body>
+
+ <nav>
+     			<div class="nav-wrapper">
+    			<a href="#" class="brand-logo center">World Without Borders</a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="http://www.worldwithoutborders.ml">Dashboard</a></li>
+                <li><a href="file:///C:/Users/Kyle/Desktop/penpal-app-web/aboutpage.html">About Page</a></li>
+                <li><a href="file:///C:/Users/Kyle/Desktop/penpal-app-web/founderspage.html">The Founders Page</a></li>
+                </ul>
+            </div>
+        </nav>
+
 <section class="intro">
 <div class="inner">
 <div class="content">
-<h1><center>Welcome to World Without Walls</center></h1><br>
+<h1><center>Welcome to World Without Borders</center></h1><br>
 <a class="waves-effect waves-light btn-large" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/login.html"><i class="material-icons">Get Started</i></a><br><br>
-<a class="waves-effect waves-light btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/aboutpage.html" class="btn" onclick="Materialize.fadeInImage('#staggered-test')">More Info</a>
 </div>
 </div>
 </section>
