--- a/aboutpage.html
+++ b/aboutpage.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device=width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="aboutpagemain.css")/>
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
@@ -66,30 +67,29 @@ Click on me to display Date and Time</button><br><br>
 
         Nelson Mandela</p><br>
 
-<p class="flow-text">World Without Walls will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
+<p class="flow-text">World Without Borders will be a service that upgrades the old pen pal concept with instant messaging that young people are used to today in the form of an online chat app. Especially in the case of foreign language education, this is fantastic because it allows students to improve their language skills while having fun by conversing with native speakers their age. Certain tools will also be implemented that make this type of communication easier such as the ability to translate just an individual word or phrase, grammar checks, and speech to text.</p>
         </div><br><br>
 
-        
         <footer class="page-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">World Without Walls</h5>
-                        <p class="grey-text text-lighten-4">A inovative messaging website.</p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutwalls.tk">World Without Walls Messaging</a></li>
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">World Without Borders</h5>
+                <p class="grey-text text-lighten-4">A inovative messaging website.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                            <li><a class="grey-text text-lighten-3" href="http://www.worldwithoutborders.ml">World Without Borders Messaging</a></li>
                             <li><a class="grey-text text-lighten-3" href="founderspage.html">The Founders Page</a></li>
                         </ul>
-                    </div>
-                </div>
+              </div>
             </div>
-            <div class="footer-copyright">
-                <div class="container">© 2017 Copyright Text
-
-                </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">© 2017 Copyright Text
             </div>
+          </div>
         </footer>
+
 </html>
