--- a/profilepage.html
+++ b/profilepage.html
@@ -21,7 +21,7 @@
             </div>
         </nav>
 
- <a class="waves-effect waves-light btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html"><i class="material-icons">Add to your Profile Page</i></a><br><br><br><br>
+ <a class="waves-effect waves-light btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html"><i class="material-icons">Add to your Profile Page</i></a><br><br><br><br><br>
  
  <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">About You</i></a><br>
  
