Add proper hrefs for links to profilepage and addtoyourprfilepage.html.

--- a/profilepage.html
+++ b/profilepage.html
@@ -21,10 +21,10 @@
             </div>
         </nav>
 
- <a class="waves-effect waves-light btn" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html"><i class="material-icons">Add to your Profile Page</i></a><br><br><br><br><br>
- 
+ <a class="waves-effect waves-light btn" href="addtoyourprofilepage.html"><i class="material-icons">Add to your Profile Page</i></a><br><br><br><br><br>
+
  <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">About You</i></a><br>
- 
+
  <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Status</i></a><br>
 
  <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Messages</i></a><br>
