--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
                 <!-- <a href="aboutpage.html">About</a> -->
-                <a id="user-name" href=# hidden>Username</a>
+                <a id="user-name" href="profilepage.html" hidden>Username</a>
             </li>
             <li>
                 <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic" hidden></a>
