--- a/landingpage.html
+++ b/landingpage.html
@@ -2,57 +2,90 @@
 <html>
 
 <head>
-<meta charset="utf-8">
-<title>Landing Page</title>
-<meta name="viewport" content="width=device-width,initial-scale=1")/>
-<link rel="stylesheet" type="text/css" href="styles/landingpage.css")/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <span class="notranslate"><title>World Without Borders Landing Page</title></span>
+  <link rel="stylesheet" type="text/css" href="styles/landingpage.css">
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+
+  <!-- Web Application Manifest -->
+  <link rel="manifest" href="manifest.json">
+  <!-- Add to homescreen for Chrome on Android -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="World Without Borders">
+  <meta name="theme-color" content="#303F9F">
+
+  <!-- Add to homescreen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="World Without Borders">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+
+  <!-- Tile icon for Win8 -->
+  <meta name="msapplication-TileColor" content="#3372DF">
+  <meta name="msapplication-navbutton-color" content="#303F9F">
+
+  <!-- Compiled and minified CSS -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 </head>
 
-<body>
-<section class="intro">
-<div class="inner">
-<div class="content">
-<h1><center>Welcome to World Without Walls</center></h1>
-<a class="btn" href=# id="get-started">Get Started</a>
+<body class="teal valign-wrapper">
+  <!--<section class="intro">
+    <div class="inner">
+      <div class="content">
+        <h1>
+          <center>Welcome to World Without Walls</center>
+        </h1>
+        <a class="btn" href=# id="get-started">Get Started</a>
+      </div>
+    </div>
+  </section>
+  <p>
+    <center>The Innovative Messaging Website</center>
+  </p>-->
+  <!--<div class="valign-wrapper">-->
+    <h1 class="white-text center-align">World Without Walls</h1>
+  <!--</div>-->
 
-</div>
-</div>
-</section>
-<p><center>The Innovative Messaging Website</center></p>
-
-<!--Firebase-->
-<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
+  <!--Firebase-->
+  <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
       apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
       authDomain: "penpalapp-6020c.firebaseapp.com",
       databaseURL: "https://penpalapp-6020c.firebaseio.com",
       storageBucket: "penpalapp-6020c.appspot.com",
       messagingSenderId: "322094641122"
-  };
-  firebase.initializeApp(config);
-  var auth = firebase.auth();
-  var authStateKnown;
-  var btnClicked = false;
-  auth.onAuthStateChanged(function(user){
-    authStateKnown = true;
-    if(btnClicked) {
-      window.location.href = auth.currentUser === null ? 'login.html' : 'dashboard.html';
-    }
-  });
+    };
+    firebase.initializeApp(config);
+    var auth = firebase.auth();
+    var authStateKnown;
+    var btnClicked = false;
+    auth.onAuthStateChanged(function (user) {
+      authStateKnown = true;
+      if (btnClicked) {
+        window.location.href = auth.currentUser === null ? 'login.html' : 'dashboard.html';
+      }
+    });
 
 
-  var btn = document.getElementById('get-started');
-  btn.addEventListener('click', function(){
-    btnClicked = true;
-    if(authStateKnown) {
-      window.location.href = auth.currentUser === null ? 'login.html' : 'dashboard.html';
-    }
-  });
-
-
-
-</script>
+    var btn = document.getElementById('get-started');
+    btn.addEventListener('click', function () {
+      btnClicked = true;
+      if (authStateKnown) {
+        window.location.href = auth.currentUser === null ? 'login.html' : 'dashboard.html';
+      }
+    });
+  </script>
 </body>
+
 </html>
