--- a/dashboard.html
+++ b/dashboard.html
@@ -197,10 +197,10 @@
     </span>
     </div>
 
-    <div id="tools-container" class="col s5 m5 l4 white-text" style="margin-top: 5px;">
+    <div id="tools-container" class="col s5 m5 l4 teal" style="margin-top: 5px;">
         <center>Tools</center>
-        <div id="chat" class="card z-depth-3">
-          <ul id="translate-panel" class="collapsible" data-collapsible="accordion">
+        <!--<div id="chat" class="card z-depth-3">-->
+          <ul id="translate-panel" class="collapsible card" data-collapsible="accordion">
               <li>
                   <div class="collapsible-header"><span style="color:red;">Translate Tool</span><span class="translate"><i class="material-icons" style="color:red;">compare_arrows</i></span></div>
                   <div class="collapsible-body">
@@ -239,11 +239,11 @@
                       <div class="row">
                           <span class="notranslate"><p id="translatedText" class="col s12 m12 l12"></p></span>
                       </div>
-                  </div>
+                  <!--</div>-->
               </li>
           </ul>
 
-          <ul id="special-characters-panel" class="collapsible" data-collapsible="accordion">
+          <ul id="special-characters-panel" class="collapsible card" data-collapsible="accordion">
               <li>
                   <div class="collapsible-header"><span style="color:red;">Special Characters</span><span class="notranslate"><i class="material-icons" style="color:red;">translate</i></span></div>
                   <div class="collapsible-body">
