--- a/dashboard.html
+++ b/dashboard.html
@@ -198,7 +198,7 @@
     </div>
 
     <div id="tools-container" class="col s5 m5 l4 teal" style="margin-top: 5px;">
-        <center>Tools</center>
+        <center class="white-text">Tools</center>
         <!--<div id="chat" class="card z-depth-3">-->
           <ul id="translate-panel" class="collapsible card" data-collapsible="accordion">
               <li>
