Redid landing page

--- a/landingpage.html
+++ b/landingpage.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <span class="notranslate"><title>World Without Borders Landing Page</title></span>
-  <link rel="stylesheet" type="text/css" href="styles/landingpage.css">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -35,25 +34,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/landingpage.css">
+
 </head>
 
-<body class="teal valign-wrapper">
-  <!--<section class="intro">
-    <div class="inner">
-      <div class="content">
-        <h1>
-          <center>Welcome to World Without Walls</center>
-        </h1>
-        <a class="btn" href=# id="get-started">Get Started</a>
-      </div>
-    </div>
-  </section>
-  <p>
-    <center>The Innovative Messaging Website</center>
-  </p>-->
-  <!--<div class="valign-wrapper">-->
-    <h1 class="white-text center-align">World Without Walls</h1>
-  <!--</div>-->
+<body>
+    <h1 id="title">World Without Walls</h1>
+    <img class="www-logo responsive-img" src="https://files.slack.com/files-tmb/T1UER92E9-F57FA398T-2f0c4bd52a/base_recolored_360.png"></img>
+    <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
 
   <!--Firebase-->
   <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
