Started Fixing Some of the Pages

--- a/profilepage.html
+++ b/profilepage.html
@@ -21,16 +21,56 @@
             </div>
         </nav>
 
- <a class="waves-effect waves-light btn" href="addtoyourprofilepage.html"><i class="material-icons">Add to your Profile Page</i></a><br><br><br><br><br>
+   <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+        <h3>About You</h3>
+          <p>Here you can add a picture and info about you here.</p>
+        </div>
+        <div class="card-action">
+          <a href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+        <h3>Blank</h3>
+          <p>Blank</p>
+        </div>
+        <div class="card-action">
+          <a href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
- <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">About You</i></a><br>
+<div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+        <h3>Blank</h3>
+          <p>Blank.</p>
+        </div>
+        <div class="card-action">
+          <a href="file:///C:/Users/Kyle/Desktop/penpal-app-web/addtoyourprofilepage.html">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
- <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Status</i></a><br>
 
- <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Messages</i></a><br>
-
- <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Contacts</i></a><br>
-
-<a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Notification Settings</i></a><br>
 </body>
 </html>
