--- a/landingpage.html
+++ b/landingpage.html
@@ -4,10 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>Landing Page</title>
-<<<<<<< HEAD
-<<<<<<< HEAD
 <meta name="viewport" content="witdth=device-width,initial-scale=1")/>
-<<<<<<< HEAD
 <link rel="stylesheet" type="text/css" href="landingpage.css")/>
 
 <!-- Compiled and minified CSS -->
@@ -16,10 +13,6 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
-=======
->>>>>>> master
-<meta name="viewport" content="width=device-width,initial-scale=1")/>
-<link rel="stylesheet" type="text/css" href="styles/landingpage.css")/>
 </head>
 
 <body>
@@ -34,30 +27,11 @@
                 </ul>
             </div>
         </nav>
-
-<section class="intro">
-<div class="inner">
-<div class="content">
-<<<<<<< HEAD
+<div>
 <h1><center>Welcome to World Without Borders</center></h1><br>
 <a class="waves-effect waves-light btn-large" href="file:///C:/Users/Kyle/Desktop/penpal-app-web/login.html"><i class="material-icons">Get Started</i></a><br><br>
 </div>
-</div>
-</section>
-=======
-<h1><center>Welcome to World Without Walls</center></h1>
-<a class="btn" href=# id="get-started">Get Started</a>
-
-</div>
-</div>
-</section>
 <p><center>The Innovative Messaging Website</center></p>
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> 3e8269dac1228e0f158c7d741a621ae1a36c241b
-=======
-=======
->>>>>>> master
 
 <!--Firebase-->
 <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
@@ -93,9 +67,5 @@
 
 
 </script>
-<<<<<<< HEAD
->>>>>>> master
-=======
->>>>>>> master
 </body>
 </html>
