Trying to fix image bug on chrome

--- a/landingpage.html
+++ b/landingpage.html
@@ -45,7 +45,7 @@
 <body>
   <div id="fullpage">
     <div class="section">
-      <img class="www-logo responsive-img" src="https://files.slack.com/files-tmb/T1UER92E9-F57FA398T-2f0c4bd52a/base_recolored_360.png"></img>
+      <img class="www-logo responsive-img" src="http://i.imgur.com/fNv2njT.png"></img>
       <h1 id="title">World Without Borders</h1>
       <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
       <br>
