Fixed image not showing up. Fixed responsiveness

--- a/landingpage.html
+++ b/landingpage.html
@@ -45,13 +45,17 @@
 <body>
   <div id="fullpage">
     <div class="section">
-      <img class="www-logo responsive-img" src="http://i.imgur.com/fNv2njT.png"></img>
-      <h1 id="title">World Without Borders</h1>
-      <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
-      <br>
-      <a class="btn waves-light waves-effect" id="about-button" href="#aboutPage">About</a>
-      <a class="btn waves-light waves-effect" id="founders-button" href="#foundersPage">Founders</a>
+      <div id="intro-div">
+        <img class="www-logo responsive-img" src="https://thumb.ibb.co/cDwV1Q/Base_recolored.png"></img>
 
+        <h1 id="title">World Without Borders</h1>
+        <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
+        <br>
+        <div class="row">
+          <a class="btn waves-light waves-effect" id="about-button" href="#aboutPage">About</a>
+          <a class="btn waves-light waves-effect" id="founders-button" href="#foundersPage">Founders</a>
+        </div>
+      </div>
     </div>
     <div class="section" id="about">
       <h2>What is World Without Borders?</h1>
