Attempting to fix mobile responsiveness

--- a/landingpage.html
+++ b/landingpage.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Improve your foreign language skills by chatting with native speakers your age.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0">
   <span class="notranslate"><title>World Without Borders Landing Page</title></span>
 
   <!-- Disable tap highlight on IE -->
