--- a/stat-summary.html
+++ b/stat-summary.html
@@ -46,7 +46,7 @@
     <a href="dashboard.html">Back to Conversations</a>
 
     <!--This card contains stats of the current user-->
-    <div class="card" id="user-card">
+    <div class="card" id="user-card" hidden>
         <div class="card-content">
             <span id="display-name" class="card-title center-align">Myum Nameum</span>
             <p id="email">user@example.com</p>
