Make attempt to improve stat-summary ui. I don't care, I'm releasing this for now.

--- a/stat-summary.html
+++ b/stat-summary.html
@@ -49,13 +49,17 @@
     <div class="card" id="user-card" hidden>
         <div class="card-content">
             <span id="display-name" class="card-title center-align">Myum Nameum</span>
+            <img id="profile-pic" class="circle" src=# width="200px" height="200px"></img>
             <p id="email">user@example.com</p>
-            <img id="profile-pic" src=# width="200px" height="200px"></img>
         </div>
     </div>
 
+
     <!--This card and all the rest that follow are statistics about each individual conversation.
     Eventually, cards like these will be programatically generated.-->
+    <ul id="conversation-stat-list" class="collection">
+
+    </ul>
     <!-- <div>
       <div class="card">
           <div class="card-content">
