Change firebase initialization on landingpage and stat-summary to match that of the release firebase app.

--- a/landingpage.html
+++ b/landingpage.html
@@ -48,11 +48,12 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyCx-2_5IcfXswoDZhjle1rPS3m-ryi3rpM",
-      authDomain: "penpalapp-6020c.firebaseapp.com",
-      databaseURL: "https://penpalapp-6020c.firebaseio.com",
-      storageBucket: "penpalapp-6020c.appspot.com",
-      messagingSenderId: "322094641122"
+      apiKey: "AIzaSyDLnL7hjfEVuQIuHVD8NA7shxlzItZviaw",
+        authDomain: "worldwithoutwalls-f2d4b.firebaseapp.com",
+        databaseURL: "https://worldwithoutwalls-f2d4b.firebaseio.com",
+        projectId: "worldwithoutwalls-f2d4b",
+        storageBucket: "worldwithoutwalls-f2d4b.appspot.com",
+        messagingSenderId: "517582843677"
     };
     firebase.initializeApp(config);
     var auth = firebase.auth();
