--- a/stat-summary.html
+++ b/stat-summary.html
@@ -45,7 +45,7 @@
 <bod id='body'>
 
     
-    <a style="color: red;" id="back-button" href="dashboard.html">Back to Conversations</a>
+    <a style="color: red;" class="center-align" id="back-button" href="dashboard.html">Back to Conversations</a>
 
     <!--This card contains stats of the current user-->
     <div class="card" id="user-card" hidden>
@@ -60,7 +60,10 @@
     <!--This card and all the rest that follow are statistics about each individual conversation.
     Eventually, cards like these will be programatically generated.-->
     <ul id="conversation-stat-list" class="collection">
-
+        <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Joshua Deng</span><p class="email">joshuakdeng@gmail.com</p><p class="sent">Sent: 9 Messages , 53 Words</p><p class="received">Received: 10 Messages , 73 Words</p></li>
+        <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Ryan Anderson</span><p class="email">rkanderson15@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 2 Messages , 10 Words</p></li>
+        <li class="collection-item avatar"><img src="https://lh4.googleusercontent.com/-u9ORZqi-k0M/AAAAAAAAAAI/AAAAAAAAAIY/k1UqAB3GKA4/photo.jpg" alt="" class="profile-pic circle"><span class="title">Ryan Anderson</span><p class="email">shnoutyanderson@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 2 Messages , 11 Words</p></li>
+        <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Kyle Seid Phan</span><p class="email">kyleseidphan@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 1 Messages , 3 Words</p></li>
     </ul>
      <!--<div>
       <div class="card">
