--- a/dashboard.html
+++ b/dashboard.html
@@ -223,6 +223,15 @@
                                   <option value="es">Spanish</option>
                                   <option value="fr">French</option>
                                   <option value="zh-CN">Chinese</option>
+                                  <option value="ja">Japanese</option>
+                                  <option value="ar">Arabic</option>
+                                  <option value="ko">Korean</option>
+                                  <option value="fa">Persian</option>
+                                  <option value="ru">Russian</option>
+                                  <option value="de">German</option>
+
+
+
                                   </select>
                           </div>
                           <div class="input-field col s6 m6 l6">
@@ -232,6 +241,12 @@
                                   <option value="es">Spanish</option>
                                   <option value="fr">French</option>
                                   <option value="zh-CN">Chinese</option>
+                                  <option value="ja">Japanese</option>
+                                  <option value="ar">Arabic</option>
+                                  <option value="ko">Korean</option>
+                                  <option value="fa">Persian</option>
+                                  <option value="ru">Russian</option>
+                                  <option value="de">German</option>
                                   </select>
                           </div>
                       </div>
