--- a/dashboard.html
+++ b/dashboard.html
@@ -346,7 +346,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/moment.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.11/moment-timezone-with-data-2010-2020.min.js'></script>
-    <script src="scripts/user-info.js"></script>
+    <script src="scripts/user-info-new.js"></script>
 
 
 
