Local Times appear on chat title along side name of the person you are chatting with.

--- a/dashboard.html
+++ b/dashboard.html
@@ -120,7 +120,10 @@
     </div>
 
         <div id="chat-container" class="col s9 m7 l6 teal white-text">
-            <center>Chat</center>
+            <center id="chat-title" hidden>
+              <span class="display-name"></span>
+              <span class="local-time"></span>
+            </center>
             <span class="notranslate">
         <div id="chat" class="card z-depth-3">
             <div class="preloader-wrapper active" id="chat-preloader">
