--- a/stat-summary.html
+++ b/stat-summary.html
@@ -48,12 +48,14 @@
     <a style="color: red;" class="center-align" id="back-button" href="dashboard.html">Back to Conversations</a>
 
     <!--This card contains stats of the current user-->
-    <div class="card" id="user-card" hidden>
-        <div class="card-content">
-            <span id="display-name" class="card-title center-align">Myum Nameum</span>
-            <img id="profile-pic" class="circle" src=# width="200px" height="200px"></img>
-            <p id="email" class="center-align">user@example.com</p>
-        </div>
+    <div id="user-card-container" style="display:none">
+      <div class="card" id="user-card">
+          <div class="card-content">
+              <span id="display-name" class="card-title center-align">Myum Nameum</span>
+              <img id="profile-pic" class="circle" src=# width="200px" height="200px"></img>
+              <p id="email" class="center-align">user@example.com</p>
+          </div>
+      </div>
     </div>
 
 
