school-page queries firebase for users in own school and initializes them in a list.

--- a/school-page.html
+++ b/school-page.html
@@ -52,13 +52,13 @@
 
 
     <div id="options-container">
-      <ul class="collection with-header">
+      <!-- <ul class="collection with-header">
         <li class="collection-header"><h4>Saratoga High</h4></li>
         <li class="collection-item"><div>Alvin<button class="secondary-content">ADD</button></div></li>
         <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
         <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
         <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-      </ul>
+      </ul> -->
     </div>
 
     <!-- <div id="user-card-container" style="display:block">
