This is a commit. I did stuff lol.

--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -43,11 +43,32 @@
 <body>
     <!-- Content goes in here -->
     <div id="content" style="display:none;">
-        <div class="row">
+      <h4 class="black-text">Welcome to WWB!</h5>
+      <h5 class="black-text">Please enter some information.</h5>
+      <div class="row">
         <div class="input-field col s6">
-          <input value="Alvin" id="first_name2" type="text" class="validate">
-          <label class="active" for="first_name2">First Name</label>
+          <input value="" id="full-name" type="text" class="validate">
+          <label class="active" for="full-name">First Name</label>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <input value="" id="email" type="text" class="validate">
+          <label class="active" for="email">Email</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s6">
+          <input value="" id="school-code" type="text" class="validate">
+          <label class="active" for="school-code">School Code</label>
+        </div>
+      </div>
+
+        <a id='submit-button' class="waves-effect waves-light btn">Submit</a>
+
+
       </div>
     </div>
 <!-- Firebase -->
