Tried making back to conversations button in stat.summary.html red like dashboard

--- a/stat-summary.html
+++ b/stat-summary.html
@@ -45,7 +45,10 @@
 <body id='body'>
 
 
-    <a style="color: red;" class="center-align" id="back-button" href="dashboard.html">Back to Conversations</a>
+    <a id="back-button" style="color: red;" class="center-align" class="btn-large waves-effect waves-light red lighten-1"  href="dashboard.html">Back to Conversations</a>
+
+
+
 
     <!--This card contains stats of the current user-->
     <div id="user-card-container" style="display:none">
