--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -84,6 +84,7 @@
   };
   firebase.initializeApp(config);
 </script>
+<script src="scripts/command.js"></script>
 <script src="scripts/pages/account-info-sync.js"></script>
 
 </body>
