--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
     <div id="message-interaction" class="card">
         <form id="message-form" action="#">
             <div class="input-field inline" id="message-input">
-                <input type="text" id="message">
+                <input type="text" id="message" style="color:black;">
                 <label for="message"><span class="translate">Message...</span></label>
             </div>
             <button id="submit" disabled type="submit" class="btn waves-light waves-effect red lighten-1">
