Add presence system inside dashboard. Presence script can be used on any page.

--- a/test-commands.html
+++ b/test-commands.html
@@ -27,9 +27,9 @@
         var auth = firebase.auth();
         auth.onAuthStateChanged(function(user){
           if(user) {
-            var action = "registerInSchool";
+            var action = "sayHi";
             var params = {
-              scho: '95070000'
+              schoo: '95070000'
               // emailAddress: 'rkanderson15@gmail.com',
               // subject: 'Hello, Ryan',
               // text: 'This message was sent automatically.'
