--- a/dashboard.html
+++ b/dashboard.html
@@ -314,6 +314,7 @@
 
     <!-- Modules that add specific functionality. -->
     <script src="scripts/get-os-details.js"></script>
+    <script src="scripts/presence.js"></script>
     <script src="scripts/bind-signout-button.js" buttonid="sign-out"></script>
     <script src="scripts/bind-signout-button.js" buttonid="sign-out-mobile"></script>
     <script src="scripts/bind-conversation-list.js" conversationlistid="conversation-list"></script>
