--- a/landingpage.html
+++ b/landingpage.html
@@ -40,7 +40,7 @@
 
 <body>
     <h1 id="title">World Without Borders</h1>
-    <img class="www-logo responsive-img" src="https://files.slack.com/files-tmb/T1UER92E9-F57FA398T-2f0c4bd52a/base_recolored_360.png"></img>
+    <img class="www-logo responsive-img" src="images/base_recolored_360.png"></img>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a>
 
   <!--Firebase-->
