--- a/stat-summary.html
+++ b/stat-summary.html
@@ -45,7 +45,7 @@
 <bod id='body'>
 
     
-    <a style="color: red;" class="center-align" id="back-button" href="dashboard.html">Back to Conversations</a>
+    <a style="margin-top: 10px; align-self: center;" class="center-align btn waves-light waves-effect red lighten-1" id="back-button" href="dashboard.html">Back to Conversations</a>
 
     <!--This card contains stats of the current user-->
     <div class="card" id="user-card" hidden>
