--- a/dashboard.html
+++ b/dashboard.html
@@ -302,12 +302,12 @@
     <!-- The main page script -->
     <script src="scripts/pages/dashboard.js"></script>
 
-    <!--get user info-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/moment.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.11/moment-timezone-with-data-2010-2020.min.js'></script>
     <script src="scripts/user-info-new.js"></script>
     <script src="scripts/command.js"></script>
+    <script src="scripts/google-analytics-tracking.js"></script>
 
 
 
