Add a placeholder profile page with links to a modified account-info-sync and the stat-summary.

--- a/profile-page.html
+++ b/profile-page.html
@@ -1,11 +1,11 @@
 <!doctype.html>
 <html>
 <head>
-<meta charset="utf-8">
-	<title>Profile Page</title>
+	<meta charset="utf-8">
+	<title>My Profile</title>
 	<meta name="viewport" content="witdth=device-width,initial-scale=1")/>
-<link rel="stylesheet" type="text/css" href="profilepage.css")/>
-<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" type="text/css" href="profilepage.css")/>
+	<!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 
   <!-- Compiled and minified JavaScript -->
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-<nav>
+This is the profile page.
+Your information should show up here.
+Click <a href="account-info-sync.html?editProfile=true">here</a> to edit your profile.
+Click <a href="stat-summary.html">here</a> for your stat summary.
+
+<!-- <nav>
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo center">Your Profile Page</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
@@ -31,6 +36,6 @@
 
  <a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Contacts</i></a><br>
 
-<a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Notification Settings</i></a><br>
+<a class="waves-effect waves-light btn" href="#!"><i class="material-icons">Notification Settings</i></a><br> -->
 </body>
 </html>
