--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -43,8 +43,10 @@
 <body>
     <!-- Content goes in here -->
     <div id="content" style="display:none;">
-      <h4 class="black-text">Welcome to WWB!</h5>
-      <h5 class="black-text">Please enter some information.</h5>
+      <div id='welcome-text'>
+        <h4 class="black-text">Welcome to WWB!</h5>
+        <h5 class="black-text">Please enter some information.</h5>
+      </div>
       <div class="row">
         <div class="input-field col s6">
           <input value="" id="full-name" type="text" class="validate">
