--- a/dashboard.html
+++ b/dashboard.html
@@ -72,7 +72,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
                 <!-- <a href="aboutpage.html">About</a> -->
-                <a id="user-name" href='stat-summary.html' hidden>Username</a>
+                <a id="user-name" href='profile-page.html' hidden>Username</a>
             </li>
             <li>
                 <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic" hidden></a>
