--- a/school-page.html
+++ b/school-page.html
@@ -42,44 +42,24 @@
 
 </head>
 
-<body>
+<body id='body' style='display:none'>
 
     <a style="color: white;" class="center-align" id="back-button" href="dashboard.html">Back to Conversations</a>
 
-    <p>Type your school code in here to see a list of options.</p>
+    <!-- <p>Type your school code in here to see a list of options.</p>
     <input type="text" id="school-code-input"></input>
-    <button id="search-button">Search</button>
+    <button id="search-button">Search</button> -->
 
 
     <div id="options-container">
-      <!-- <ul class="collection with-header">
-        <li class="collection-header"><h4>Saratoga High</h4></li>
-        <li class="collection-item"><div>Alvin<button class="secondary-content">ADD</button></div></li>
-        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-      </ul> -->
+
     </div>
-
-    <!-- <div id="user-card-container" style="display:block">
-      <div class="card" id="user-card">
-          <div class="card-content">
-              <span id="display-name" class="card-title center-align">Myum Nameum</span>
-              <img id="profile-pic" class="circle" src=# width="200px" height="200px"></img>
-              <p id="email" class="center-align">user@example.com</p>
-          </div>
-      </div>
-    </div> -->
-
 
     <!--This card and all the rest that follow are statistics about each individual conversation.
     Eventually, cards like these will be programatically generated.-->
-    <ul id="conversation-stat-list" class="collection">
-        <!-- <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Joshua Deng</span><p class="email">joshuakdeng@gmail.com</p><p class="sent">Sent: 9 Messages , 53 Words</p><p class="received">Received: 10 Messages , 73 Words</p></li>
-        <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Ryan Anderson</span><p class="email">rkanderson15@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 2 Messages , 10 Words</p></li>
-        <li class="collection-item avatar"><img src="https://lh4.googleusercontent.com/-u9ORZqi-k0M/AAAAAAAAAAI/AAAAAAAAAIY/k1UqAB3GKA4/photo.jpg" alt="" class="profile-pic circle"><span class="title">Ryan Anderson</span><p class="email">shnoutyanderson@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 2 Messages , 11 Words</p></li>
-        <li class="collection-item avatar"><img src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg" alt="" class="profile-pic circle"><span class="title">Kyle Seid Phan</span><p class="email">kyleseidphan@gmail.com</p><p class="sent">Sent: 0 Messages , 0 Words</p><p class="received">Received: 1 Messages , 3 Words</p></li> -->
-    </ul>
+    <!-- <ul id="conversation-stat-list" class="collection">
+
+    </ul> -->
 
 
 
