--- a/account-info-sync.html
+++ b/account-info-sync.html
@@ -69,6 +69,9 @@
       </div>
 
         <a id='submit-button' class="waves-effect waves-light btn">Submit</a>
+        <div class="progress" id="progress-bar" style="display:none">
+          <div class="indeterminate"></div>
+        </div>
 
 
       </div>
