Edit profile and view stat summary buttons added just below the logout button.

--- a/dashboard.html
+++ b/dashboard.html
@@ -63,6 +63,8 @@
 <ul id="user-dropdown" class="dropdown-content">
     <li>
         <a id="sign-out">Sign-out</a>
+        <a href="account-info-sync.html?editProfile=true">Edit Profile</a>
+        <a href="stat-summary.html">View Stat Summary</a>
     </li>
 </ul>
 <nav>
@@ -81,6 +83,9 @@
         <ul class="side-nav" id="mobile-demo">
             <li>
                 <a id="sign-out-mobile">Sign-out</a>
+                <a href="account-info-sync.html?editProfile=true">Edit Profile</a>
+                <a href="stat-summary.html">View Stat Summary</a>
+
             </li>
         </ul>
     </div>
