--- a/dashboard.html
+++ b/dashboard.html
@@ -74,7 +74,9 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li>
                 <!-- <a href="aboutpage.html">About</a> -->
-                <a id="user-name" href='profile-page.html' hidden>Username</a>
+                <!-- <a id="user-name" href='profile-page.html' hidden>Username</a> -->
+                <a id="user-name" href=# hidden>Username</a> <!--Made dead link while profile-page is under development-->
+
             </li>
             <li>
                 <a class="dropdown-button" href="#!" data-activates="user-dropdown" id="user-pic" hidden></a>
