Fix bell feature to send to the right emails and contain recipient details inside modal.

--- a/dashboard.html
+++ b/dashboard.html
@@ -132,7 +132,11 @@
             <center id="chat-title" hidden>
               <span class="display-name"></span>
               <span class="local-time"></span>
-              <span><a href="#bell-modal" id="bell"><i class="material-icons">notifications_active</i></a></span>
+              <span>
+                <a href="#bell-modal" id="bell" style='color:white;'>
+                  <i class="material-icons">notifications_active</i>
+                </a>
+              </span>
             </center>
             <span class="notranslate">
         <div id="chat" class="card z-depth-3">
@@ -276,8 +280,27 @@
     <!-- bell-modal -->
     <div id="bell-modal" class="modal">
         <div class="modal-content">
-            <h4>Are you sure you want to notify this friend?</h4>
-            <button id="send-notification" class="red lighten-1 btn waves-effect waves-light">Yes</button>
+            <h4>Are you sure you want to notify <span>name</span>?</h4>
+            <button id="send-notification" class="red lighten-1 btn waves-effect waves-light">
+              </span>Yes</span>
+            </button>
+            <button class="modal-action modal-close red lighten-1 btn waves-effect waves-light">
+              </span>No Thanks</span>
+            </button>
+            <div id="send-notification-progress" class="progress" style="display:none;">
+               <div class="indeterminate"></div>
+            </div>
+            <!-- <div class="preloader-wrapper small active">
+              <div class="spinner-layer spinner-white-only">
+                <div class="circle-clipper left">
+                  <div class="circle"></div>
+                </div><div class="gap-patch">
+                  <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                  <div class="circle"></div>
+                </div>
+              </div>
+            </div> -->
         </div>
         <div class="modal-footer">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
@@ -327,7 +350,7 @@
     <script src="scripts/pages/dashboard.js"></script>
     <script>
     console.log('hi');
-     </script> 
+     </script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js'></script>
     <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/moment.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.11/moment-timezone-with-data-2010-2020.min.js'></script>
