--- a/educator/educator-login.html
+++ b/educator/educator-login.html
@@ -60,10 +60,10 @@
                       <label for="password">Password</label>
                     </div>
                   </div>
+                  <a id="login-btn" class="waves-effect waves-light btn" disabled><i class="material-icons left">account_circle</i>Sign In</a>
 
                 </form>
               </div>
-              <a id="login-btn" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Sign In</a>
               <div class="progress" style="display:none;">
                   <div class="indeterminate"></div>
               </div>
@@ -93,10 +93,10 @@
                       <label>School Code</label>
                     </div>
                   </div>
+                  <a id="create-account-btn" class="waves-effect waves-light btn" disabled><i class="material-icons left">account_circle</i>Create My Account!</a>
 
                 </form>
               </div>
-              <a id="create-account-btn" class="waves-effect waves-light btn"><i class="material-icons left">account_circle</i>Create My Account!</a>
               <div class="progress" style="display:none;">
                   <div class="indeterminate"></div>
               </div>
