Educator authentication looking slick. In eduucator-account-info-sync.html, a random code is generated and set as the school code. A new school object also gets created inside firebase.

--- a/educator/educator-login.html
+++ b/educator/educator-login.html
@@ -89,8 +89,8 @@
 
                   <div class="row">
                     <div class="input-field col s12">
-                      <input name="school-code" type="text" class="validate">
-                      <label>School Code</label>
+                      <input name="school-name" type="text">
+                      <label>School Name</label>
                     </div>
                   </div>
                   <a id="create-account-btn" class="waves-effect waves-light btn" disabled><i class="material-icons left">account_circle</i>Create My Account!</a>
