--- a/educator/index.html
+++ b/educator/index.html
@@ -19,7 +19,7 @@
 
       firebase.auth().onAuthStateChanged(function(user){
         if(user) {
-          window.location.href = 'educator-dashboard.html';
+          window.location.href = 'educator-account-info-sync.html';
         } else {
           window.location.href = 'educator-login.html';
         }
