--- a/educator/educator-dashboard.html
+++ b/educator/educator-dashboard.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body>
+<body hidden>
     <!-- <h1 id="title">World Without Borders</h1>
     <img class="www-logo responsive-img" src="images/base_recolored_360.png"></img>
     <a class="btn red lighten-1 waves-light waves-effect" href=# id="get-started">Get Started</a> -->
@@ -69,6 +69,9 @@
               </li>
           </ul>
       </div>
+
+      <h1 id="school-name"></h1>
+      <h3>Your Code: <span id="school-code"></span></h3>
     </nav>
   </span>
 
